# ferroflock

./: .gitignore  ap_setup.cpp  check_connections.py  dji_devices.json  dji_devices_sample.json  tello_lab_wifi.py
drone_controller/: CMakeLists.txt  Makefile
drone_controller/data/: drone_mapping.json
drone_controller/include/: drone_types.h  vrpn_client.h
drone_controller/src/: vrpn_client.cpp
frame-calibration/: CMakeLists.txt  DRONE_CONTROL.md
frame-calibration/control_interface/: drone_state.py
frame-calibration/include/: optitrack_viz.h
frame-calibration/python/: README.md  calibrate_frame.py  transform_refiner.py  yaw_transform.py
frame-calibration/src/: drone_control.cpp  optitrack_viz.cpp  vrpn_viz.cpp
helper_functions/: CMakeLists.txt  Makefile  README.md  config.json  dji_devices.json
helper_functions/data_old/: keyboard_control_test
helper_functions/drone_info/: dji_devices.json
helper_functions/include/: FileHandler.hpp  calibration.h  keyboard_control.h  logger.h  map_optitrack.h  menu.h  optitrack.h  pid_control.h  tello_controller.h  tello_imu_handler.h  test_optitrack_logging.h  ukf.h
helper_functions/python/: calibrate_yaw.py  get_devices.py
helper_functions/src/: calibration.cpp  keyboard_control.cpp  logger.cpp  main.cpp  map_optitrack.cpp  menu.cpp  optitrack.cpp  pid_control.cpp  tello_controller.cpp  tello_imu_handler.cpp  test_optitrack_logging.cpp  ukf.cpp
helper_functions/tests/: test_globals.cpp  test_imu.cpp  test_keyboard_control.cpp  test_optitrack_logging.cpp  test_tello_controller.cpp  test_ukf.cpp
old/: ap_setup  record.py  vrpn_test.cpp
old/drone_controller/: .gitignore  README.md  drone_controller.cpp
old/drone_controller/include/: drone_controller.h
old/drone_controller/src/: drone_controller.cpp  main.cpp
old/frame-calibration/: README.md  frame_calibration.cpp
old/frame-calibration/control_interface/: control_interface.py
old/frame-calibration/python/: calculate_transform.py  calibration_logger.py
old/frame-calibration/src/: device_scanner.cpp  drone_control.cpp
old/swarm/include/: keyboard_input.hpp  multi_tello_controller.hpp  tello_device.hpp
old/swarm/src/: swarm.cpp
old/sync-drones/python/: calibrate_orientation.py  calibration_server.cpp
old/sync-drones/src/: file_writer.cpp
old/tello_cpp/: CMakeLists.txt
old/tello_cpp/src/: record.cpp
old/vrpn/: CMakeLists.txt
setup/: add_lab_wifi.bash  install.bash  install_ros2.bash  install_torch.bash  requirements.txt
swarm/: CMakeLists.txt
swarm/src/: keyboard_input.cpp  main.cpp  multi_tello_controller.cpp  tello_device.cpp
sync-drones/: CMakeLists.txt
sync-drones/include/: FileHandler.hpp  file_writer.hpp
sync-drones/python/: drift_correction.py  map_drones.py
sync-drones/src/: drift_calibrator.cpp
tello_cpp/src/: main.cpp  record copy (direct connection).cpp
vrpn/: vrpn_viz
